# pytorch_fastapi_docker

./: .gitignore  Dockerfile.gpu  README.md  docker-compose.gpu.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
.gpu/: docker-compose.gpu.yaml
app/: main.py
app/model/: CatDogNet.py
app/templates/: model-summary.html  model.html
services/backend/: Dockerfile  requirements.txt
services/backend/app/: main.py
services/backend/app/models/: schema.py
services/backend/app/saved_model/: model.py
services/backend/app/utils/: helper.py
services/frontend/: Dockerfile  requirements.txt
services/frontend/app/: main.py
tests/: test.py
